<resources>
    <string name="app_name">Sistema de Trackeo de Pedidos</string>
    <string name="action_settings">something here</string>
    <string name="clients_tab">Clientes</string>
    <string name="products_tab">Productos</string>
    <string name="new_order_correct_save">Pedido grabado correctamente</string>
    <string name="new_order_correct_revert">Pedido eliminado correctamente</string>
    <string name="new_order_discard_title">Eliminar pedido</string>
    <string name="new_order_discard_message">Esta seguro de querer eliminar el pedido actual?</string>
    <string name="new_order_discard_positive_option">Eliminar</string>
    <string name="new_order_discard_negative_option">Cancelar</string>
    <string name="new_order_navigation_title">Carrito</string>
    <string name="new_order_total">Total:</string>
    <string name="title_activity_client_details">ClientDetails</string>
    <string name="title_activity_product_detail">Nombre del producto</string>
    <string name="cod">Cod.:</string>
    <string name="descripcion">Descripción:</string>
    <string name="cantidad_disponible">Cantidad disponible:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="pedido">Pedido</string>
    <string name="agregar_a_pedido">Agregar a pedido</string>
    <string name="example_product_name">Cosa modelo PT7000</string>
    <string name="example_price">$1.450</string>
    <string name="example_codigo_producto">151155</string>
    <string name="example_descripcion">Cosa de pie modelo PT7000, con 6 velocidades y timer configurable.</string>
    <string name="example_cantidad_disponible">12u</string>
    <string name="clients_details_adress_toolbar_text">Dirección: </string>
    <string name="clients_details_phone_toolbar_text">Teléfono: </string>
    <string name="clients_details_mobile_phone_text">Teléfono Móvil: </string>
    <string name="clients_details_static_phone_text">Teléfono Fijo: </string>
    <string name="clients_details_mail_toolbar_text">Dirección de Mail</string>
    <string name="retrieve_clients_url">http://dev-taller2.pantheonsite.io/api/clientes.json?args[0]=1</string>
    <string name="title_activity_client_map">Map</string>
    <string name="serializedClientKey">clientString</string>
    <string name="serializedProductKey">productString</string>
    <string name="agenda">Agenda</string>
    <string name="fuera_de_ruta">Fuera de Ruta</string>
    <string name="catalogo">Catalogo</string>
    <string name="configuracion">Configuracion</string>
    <string name="no_visits_available">No hay visitas Asignadas</string>
    <string-array name="days">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">Este usuario es inválido</string>
    <string name="error_invalid_password">Esta contraseña es inválida</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="error_incorrect_login">El nombre de usuario o la contraseña son incorrectos</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_pedido">PedidoActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_new_order">NewOrderActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="totals">Totales</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="action_scan">com.google.zxing.client.android.SCAN</string>
    <string name="summary_visited_clients_text">Clientes visitados:</string>
    <string name="summary_offroute_visited_clients_text">Clientes visitados fuera de ruta:</string>
    <string-array name="months_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Oktubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="months_array_numerical">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="order_filter_options">
        <item>Título</item>
        <item>Marca</item>
        <item>Categoría</item>
    </string-array>
</resources>