<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sebastian.orderTracker.ClientDetails"
    tools:showIn="@layout/client_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/client_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="@dimen/client_normal_font_size"
            android:textColor="@color/primary_material_dark"
            android:text="Nombre: " />
        <TextView
            android:id="@+id/client_details_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="@dimen/client_normal_font_size"
            android:textColor="@color/primary_material_dark"
            android:text="Compañia: " />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:alpha="0.75"
            android:textSize="20sp"
            android:text="@string/clients_details_adress_toolbar_text" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clients_details_adress_toolbar_text"
            android:id="@+id/client_details_address"
            android:textSize="@dimen/client_normal_font_size"
            android:textColor="@color/primary_material_dark"
            android:layout_margin="@dimen/text_margin"/>

        <include layout="@layout/activity_client_map" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clients_details_phone_toolbar_text"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:alpha="0.75"
            android:textSize="20sp"
            android:id="@+id/toolbar_title" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/client_details_mobile_phone_layout"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/client_normal_font_size"
                android:layout_margin="10sp"
                android:textColor="@color/primary_material_dark"
                android:text="@string/clients_details_mobile_phone_text"
                android:id="@+id/client_details_mobile_phone_number"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/client_details_static_phone_layout"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/client_normal_font_size"
                android:layout_margin="10sp"
                android:text="@string/clients_details_static_phone_text"
                android:textColor="@color/primary_material_dark"
                android:id="@+id/client_details_static_phone_number"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/clients_details_mail_toolbar_text"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:alpha="0.75" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:id="@+id/clients_details_mail_layout"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/client_normal_font_size"
                android:textColor="@color/primary_material_dark"
                android:id="@+id/client_details_mail"
                />
        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
